fixed image overflow

--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -220,6 +220,10 @@
             padding: 1em;
             border-radius: 0.45em;
             margin-top: -0.75em;
+
+            img {
+                width: 100%;
+            }
         }
 
         .buttons {
